tried to add more functionality

--- a/index.html
+++ b/index.html
@@ -30,16 +30,15 @@
 
         <main>
             <section id="prompt" class="prompt">
-            <p>Do you have a question?</p>
-            <input type="text" />
-            <button id="submit">Submit</button>
+                <p>Do you have a question?</p>
+                <input type="text" />
+                <button id="submit">Submit</button>
             </section>
             <section id="fortune" class="fortune hide">
-                <img src="./assets/8ball.jpeg" alt="magic 8 ball"/>
-                <p id+"answer"></p>
+                <img src="./assets/8ball.jpeg" alt="magic 8 ball" />
+                <p id="answer"></p>
                 <button id="reset">Again?</button>
-        
-            </Section>
+            </section>
         </main>
     </body>
 </html>
