--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <main>
             <section id="prompt" class="prompt">
                 <p>Do you have a question?</p>
-                <input type="text" />
+                <input id="question" type="text" />
                 <button id="submit">Submit</button>
             </section>
             <section id="fortune" class="fortune hide">
